# CS_489_Hit-Run

./: .gitignore  race_setup.sh
CS489/: README.md
CS489/sim_ws/src/gap_follow/gap_follow/: gap_follow_launch.py
CS489/sim_ws/src/gap_follow/src/: reactive_node.cpp
CS489/sim_ws/src/safety_node/: setup.cfg  setup.py
CS489/sim_ws/src/safety_node/safety_node/launch/: safety_node_launch.py
CS489/sim_ws/src/safety_node/src/: nick_safety_node.cpp  prabh_safety_node.cpp
lab1_ws/f1tenth_lab1_template/: SUBMISSION.md
lab1_ws/src/lab1_pkg/: package.xml  setup.py
lab1_ws/src/lab1_pkg/lab1_pkg/: relay.py  talker.py
lab1_ws/src/lab1_pkg/lab1_pkg/launch/: lab1_launch.py
lab2/f1tenth_lab2_template/david_safety_node/: CMakeLists.txt  package.xml  setup.py
sim_ws/src/david_safety_node/: CMakeLists.txt  setup.cfg  setup.py
sim_ws/src/david_safety_node/david_safety_node/launch/: david_safety_node_launch.py
sim_ws/src/david_safety_node/scripts/: david_safety_node.py
sim_ws/src/david_safety_node/src/: david_safety_node.cpp
sim_ws/src/f1tenth_gym_ros/: docker-compose.yml
sim_ws/src/f1tenth_gym_ros/config/: sim.yaml
sim_ws/src/f1tenth_gym_ros/maps/: AEB_OH_1118.pgm  AEB_OH_1118.yaml  AEB_RACE_11_19.pgm  AEB_RACE_11_19.yaml  AEB_RACE_DAY_1.pgm  AEB_RACE_DAY_1.yaml  AEB_RACE_DAY_2.pgm  AEB_RACE_DAY_2.yaml  FELX_TEST_2.pgm  FELX_TEST_2.yaml  FINAL_MAP.pgm  FINAL_MAP.yaml
sim_ws/src/gap_follow/gap_follow/: gap_follow_launch.py
sim_ws/src/gap_follow/src/: reactive_node.cpp
sim_ws/src/particle_filter/config/: localize.yaml
sim_ws/src/particle_filter/maps/: waffle.pgm  waffle.yaml
sim_ws/src/pure_pursuit/: README.md  README_CAR.md  package.xml  setup.py  waypoints.csv
sim_ws/src/pure_pursuit/pure_pursuit/: launch_pure_pursuit.py  marker.py  pure_pursuit_node.py  race_waypoints.csv  waypoint_logger.py  waypoints.csv
sim_ws/src/pure_pursuit/scripts/: pure_pursuit_node.py
sim_ws/src/pure_pursuit/src/: pure_pursuit_node.cpp  temp.txt
sim_ws/src/safety_node/: CMakeLists.txt  setup.cfg  setup.py
sim_ws/src/safety_node/scripts/: david_safety_node.py
sim_ws/src/safety_node/src/: billy_safety_node.cpp  david_safety_node.cpp  nick_safety_node.cpp  prabh_safety_node.cpp
sim_ws/src/wall_follow/src/: wall_follow_node.cpp
sim_ws/src/wall_follow/wall_follow/launch/: wall_follow_launch.py
(+1 files in other folders)
